Wrap logo and unorderlist into a container

--- a/index.html
+++ b/index.html
@@ -8,23 +8,26 @@
 </head>
 <body>
     <div class="header">
-        <img src="" alt="logo">
-        <ul>
-            <li>header link one</li>
-            <li>header link two</li>
-            <li>header link three</li>
-        </ul>
+        <div>
+            <img src="" alt="logo">
+            <ul>
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ul>
+        </div>    
         <div class="headermessage">
             <div>
                 <div class="headermain">This Message is awsome</div>
                 <div class="headersecondary">Lorem ipsum dolor sit amet consectetur adipisicing elit. Expedita, maxime. Alias, dolorum voluptas eos expedita illum asperiores fugit voluptate doloribus quod nemo odit inventore et porro natus ad itaque molestias.<div>
                 <button>Sign Up</button> 
+            </div>    
             <div>
                 <img src="" alt="Image" width="250" height="250">
             </div>           
         </div>
-
     </div>
+
  
 
     
