base code for middle content

--- a/index.html
+++ b/index.html
@@ -27,6 +27,30 @@
             </div>           
         </div>
     </div>
+    <div class="main">
+        <div> Some random information</div>
+        <div>
+            <div>
+                <div>
+                    <img src="" alt="imageone">
+                    <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores rerum cumque deleniti accusantium ipsa natus. Mollitia aspernatur at, porro maxime debitis laudantium. Sapiente similique quaerat labore quam magni, quidem quis!</div>
+                </div>
+                <div>
+                    <img src="" alt="imagetwo">
+                    <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores rerum cumque deleniti accusantium ipsa natus. Mollitia aspernatur at, porro maxime debitis laudantium. Sapiente similique quaerat labore quam magni, quidem quis!</div>
+                </div>
+                <div>
+                    <img src="" alt="imagethree">
+                    <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores rerum cumque deleniti accusantium ipsa natus. Mollitia aspernatur at, porro maxime debitis laudantium. Sapiente similique quaerat labore quam magni, quidem quis!</div>
+                </div>
+                <div>
+                    <img src="" alt="imagefour">
+                    <div>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Asperiores rerum cumque deleniti accusantium ipsa natus. Mollitia aspernatur at, porro maxime debitis laudantium. Sapiente similique quaerat labore quam magni, quidem quis!</div>
+                </div>
+            </div>
+        </div>
+
+    </div>
 
  
 
